Defined fixed height for current game, let friends list overflow into scroll. Might place this in its own container so the site stays fixed to viewport height.

--- a/src/index.scss
+++ b/src/index.scss
@@ -202,7 +202,7 @@ figure:hover {
       ". . .";
       
   .current-game {
-    height: 100%;
+    height: 700px;
     @include flexCol();
     justify-content: space-between;
 
